add: adiciona testes no spring com cobertura de 60%, organização no ambiente de desenvolvimento docker e desenvolvimento inicial do front-end